[gd_scene load_steps=6 format=3 uid="uid://ucsv8e65ld5j"]

[ext_resource type="Script" path="res://scenes/fruit/fruit.gd" id="1_gvuov"]
[ext_resource type="Texture2D" uid="uid://4oek1r77sr81" path="res://assets/fruits/placeholder.png" id="1_jxcbe"]
[ext_resource type="Resource" uid="uid://qi3u83tg2r0u" path="res://resources/fruits.tres" id="2_keqqp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qpgxg"]
radius = 126.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wpm7w"]
radius = 131.004

[node name="Fruit" type="RigidBody2D" groups=["fruit"]]
max_contacts_reported = 10
contact_monitor = true
script = ExtResource("1_gvuov")
fruitsResource = ExtResource("2_keqqp")

[node name="FruitSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_jxcbe")

[node name="FruitCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qpgxg")
debug_color = Color(0.541176, 0.568627, 0, 0.419608)

[node name="FruitHitArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="FruitHitCollision" type="CollisionShape2D" parent="FruitHitArea"]
shape = SubResource("CircleShape2D_wpm7w")
debug_color = Color(0.188235, 0.619608, 0.478431, 0.419608)

[node name="FruitShockwaveTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="area_entered" from="FruitHitArea" to="." method="_on_fruit_hit_area_area_entered"]
[connection signal="timeout" from="FruitShockwaveTimer" to="." method="shockwave" binds= [false]]
